tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_40.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  r := q;
               q := q;
               x := ((200 - 2) + z);
               y := 200;
               z := 200;
               x := 0;
               r := (((200 MOD (0 MOD 1223)) DIV ((2 MOD x) * y)) < x);
               p := (z > 200);
               r := ((z = (2 MOD z)) & q);
               r := (z # (- 200))
END Test11.